--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <body>
     <div id="app">
       <div class="instructions">
-        Drag to orbit • Scroll to zoom • Adjust the sliders to explore
-        Gielis’ superformula in 3D.
+        Drag to orbit • Scroll to zoom • Use the Preset menu and sliders to
+        morph between supershapes or auto-cycle through them.
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
